<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="android.com.hw2.EditActivity">

    <Button
        android:layout_width="match_parent"
        android:text="@string/btn_selectExp"
        android:id="@+id/btn_slctExp"
        android:textSize="@dimen/fontSize"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="match_parent"
        android:textSize="@dimen/fontSizeSmall"
        android:layout_marginTop="10dp"
        android:text="@string/lbl_expenseName"
        android:layout_height="wrap_content" />
    <EditText
        android:layout_width="match_parent"
        android:id="@+id/newExpense_edit"
        android:maxLength="50"
        android:inputType="text"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:textSize="@dimen/fontSizeSmall"
        android:text="@string/lbl_categoryName"
        android:layout_height="wrap_content" />
    <Spinner
        android:layout_width="match_parent"
        android:id="@+id/category_items_edit"
        android:spinnerMode="dropdown"
        android:entries="@array/categories"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="match_parent"
        android:textSize="@dimen/fontSizeSmall"
        android:layout_marginTop="10dp"
        android:text="@string/lbl_amount"
        android:layout_height="wrap_content" />
    <EditText
        android:layout_width="match_parent"
        android:id="@+id/amount_edit"
        android:hint="@string/defaultAmount"
        android:inputType="numberDecimal"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="match_parent"
        android:textSize="@dimen/fontSizeSmall"
        android:layout_marginTop="10dp"
        android:text="@string/lbl_date"
        android:layout_height="wrap_content" />
    <EditText
        android:layout_width="match_parent"
        android:id="@+id/date_edit"
        android:focusable="false"
        android:hint="@string/data_format"
        android:textSize="@dimen/fontSizeSmall"
        android:inputType="numberDecimal"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="match_parent"
        android:text="@string/receipt_lbl"
        android:layout_marginTop="10dp"
        android:textSize="@dimen/fontSizeSmall"
        android:layout_height="wrap_content" />
    <ImageView
        android:layout_width="60dp"
        android:id="@+id/bill_edit"
        android:src="@drawable/image_finder_icon"
        android:layout_marginTop="5dp"
        android:layout_height="60dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_height="wrap_content">
    <Button
        android:layout_width="wrap_content"
        android:id="@+id/btn_saveExpense_edit"
        android:text="@string/saveExp"
        android:layout_gravity="center"
        android:layout_marginRight="25dp"
        android:layout_height="wrap_content" />
    <Button
        android:layout_width="wrap_content"
        android:id="@+id/btn_cancelExpense_edit"
        android:text="@string/cancelExp"
        android:layout_gravity="center"
        android:layout_height="wrap_content" />
    </LinearLayout>



</LinearLayout>
