<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="android.com.hw2.MainActivity">

    <Button
        android:layout_width="match_parent"
        android:text="@string/addExpense"
        android:id="@+id/btn_addExpense_main"
        android:layout_marginTop="10dp"
        android:padding="15dp"
        android:layout_marginBottom="10dp"
        android:textSize="@dimen/fontSize"
        android:layout_height="wrap_content" />
    <Button
        android:layout_width="match_parent"
        android:text="@string/editExpense"
        android:id="@+id/btn_editExpense_main"
        android:layout_marginTop="10dp"
        android:padding="15dp"
        android:layout_marginBottom="10dp"
        android:textSize="@dimen/fontSize"
        android:layout_height="wrap_content" />
    <Button
        android:layout_width="match_parent"
        android:text="@string/dltExpense"
        android:id="@+id/btn_dltExpense_main"
        android:layout_marginTop="10dp"
        android:padding="15dp"
        android:layout_marginBottom="10dp"
        android:textSize="@dimen/fontSize"
        android:layout_height="wrap_content" />
    <Button
        android:layout_width="match_parent"
        android:text="@string/showExpense"
        android:id="@+id/btn_showExpense_main"
        android:layout_marginTop="10dp"
        android:padding="15dp"
        android:layout_marginBottom="10dp"
        android:textSize="@dimen/fontSize"
        android:layout_height="wrap_content" />
    <Button
        android:layout_width="match_parent"
        android:text="@string/finishExpense"
        android:padding="15dp"
        android:id="@+id/btn_finishExpense_main"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textSize="@dimen/fontSize"
        android:layout_height="wrap_content" />
</LinearLayout>
