<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="android.com.hw2.ShowExpense">

    <TextView
        android:layout_width="match_parent"
        android:text="@string/showExpenseTitle"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="@dimen/fontSize"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="100dp"
            android:textSize="@dimen/fontSize"
            android:text="@string/nameLbl_show"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="180dp"
            android:id="@+id/name_show"
            android:textSize="@dimen/fontSize"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="100dp"
            android:textSize="@dimen/fontSize"
            android:text="@string/categoryLbl_show"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="180dp"
            android:textSize="@dimen/fontSize"
            android:id="@+id/category_show"
            android:layout_height="wrap_content" />
    </LinearLayout><LinearLayout
    android:layout_width="wrap_content"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="20dp"
    android:orientation="horizontal"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="100dp"
        android:textSize="@dimen/fontSize"
        android:text="@string/amountLbl_show"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="180dp"
        android:textSize="@dimen/fontSize"
        android:id="@+id/amount_show"
        android:layout_height="wrap_content" />
</LinearLayout><LinearLayout
    android:layout_width="wrap_content"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="20dp"
    android:orientation="horizontal"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="100dp"
        android:textSize="@dimen/fontSize"
        android:text="@string/dateLbl_show"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="180dp"
        android:textSize="@dimen/fontSize"
        android:id="@+id/date_show"
        android:layout_height="wrap_content" />
</LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:text="@string/receipt_lbl"
        android:textSize="@dimen/fontSize"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content" />
    <ImageView
        android:layout_width="160dp"
        android:id="@+id/bill_show"
        android:layout_gravity="center"
        android:layout_height="180dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="50dp"
            android:id="@+id/firstImage_show"
            android:layout_gravity="center_vertical"
            android:src="@drawable/first_icon"
            android:layout_height="30dp" />
        <ImageView
            android:layout_width="50dp"
            android:id="@+id/previousImage_show"
            android:layout_gravity="center_vertical"
            android:src="@drawable/previous_icion"
            android:layout_height="30dp" />
        <Button
            android:layout_width="150dp"
            android:id="@+id/btnFinish_show"
            android:layout_gravity="center_vertical"
            android:text="@string/finish_lbl"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_width="50dp"
            android:id="@+id/nextImage_show"
            android:layout_gravity="center_vertical"
            android:src="@drawable/next_icon"
            android:layout_height="30dp" />
        <ImageView
            android:layout_width="50dp"
            android:id="@+id/lastImage_show"
            android:layout_gravity="center_vertical"
            android:src="@drawable/last_icon"
            android:layout_height="30dp" />
    </LinearLayout>
</LinearLayout>
